--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -93,7 +93,7 @@
                             <constraint firstItem="NvO-cP-Qq6" firstAttribute="top" secondItem="3" secondAttribute="top" type="user" id="y5Y-1j-zL6"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Card" id="kHO-WN-cOS"/>
+                    <tabBarItem key="tabBarItem" title="Card" image="playingCard_icon2.png" id="kHO-WN-cOS"/>
                     <connections>
                         <outlet property="cardCollectionView" destination="NvO-cP-Qq6" id="0KR-XV-jxD"/>
                         <outlet property="resultView" destination="b4H-1e-zVg" id="mL8-BR-gV3"/>
@@ -107,7 +107,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-48" y="304"/>
+            <point key="canvasLocation" x="-32" y="24"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Cfz-qh-VJN">
@@ -122,11 +122,12 @@
                     <connections>
                         <segue destination="2" kind="relationship" relationship="viewControllers" id="DgV-uX-xBi"/>
                         <segue destination="aBO-dp-Pwi" kind="relationship" relationship="viewControllers" id="KbG-MK-RNx"/>
+                        <segue destination="Cbm-3i-uMp" kind="relationship" relationship="viewControllers" id="iNY-wk-Giu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xcz-Ee-Lna" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-619" y="763"/>
+            <point key="canvasLocation" x="-603" y="675"/>
         </scene>
         <!--Set Game View Controller - Set-->
         <scene sceneID="2ym-ow-Anj">
@@ -234,7 +235,7 @@
                             <constraint firstAttribute="bottom" secondItem="F5a-bh-2Fd" secondAttribute="bottom" constant="7" type="user" id="qci-Wh-0J9"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Set" id="TJp-QD-OPp"/>
+                    <tabBarItem key="tabBarItem" title="Set" image="setCard_icon.png" id="TJp-QD-OPp"/>
                     <connections>
                         <outlet property="cardCollectionView" destination="KNR-7j-qXt" id="oB3-i9-XNd"/>
                         <outlet property="resultView" destination="4Ow-oh-Pzv" id="84J-nf-28T"/>
@@ -248,21 +249,102 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-48" y="883"/>
+            <point key="canvasLocation" x="-32" y="603"/>
+        </scene>
+        <!--Game Result View Controller - Scores-->
+        <scene sceneID="zcm-Wp-5rS">
+            <objects>
+                <viewController id="Cbm-3i-uMp" customClass="GameResultViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="44g-5B-MjT">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Score: 25 (1/22/13 4:00pm, 35s)" translatesAutoresizingMaskIntoConstraints="NO" id="h2j-9c-PyM">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="322" id="EAP-hl-qsc"/>
+                                    <constraint firstAttribute="height" constant="350" id="Zzq-Cm-Jav"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYe-W4-ofZ">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="By Date">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByDate" destination="Cbm-3i-uMp" eventType="touchUpInside" id="tv0-ps-Ezn"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKe-vo-drc">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="By Score">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByScore" destination="Cbm-3i-uMp" eventType="touchUpInside" id="M8R-vv-hzH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPD-RB-hXv">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="x9y-9g-J7f"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="By Duration">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByDuration" destination="Cbm-3i-uMp" eventType="touchUpInside" id="jhO-Cf-ERd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sPD-RB-hXv" firstAttribute="baseline" secondItem="oKe-vo-drc" secondAttribute="baseline" type="default" id="Ao7-LO-qBP"/>
+                            <constraint firstItem="oKe-vo-drc" firstAttribute="leading" secondItem="44g-5B-MjT" secondAttribute="leading" constant="105" id="LTI-dK-WCu"/>
+                            <constraint firstAttribute="trailing" secondItem="sPD-RB-hXv" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="NNr-vD-mQy"/>
+                            <constraint firstItem="oKe-vo-drc" firstAttribute="baseline" secondItem="PYe-W4-ofZ" secondAttribute="baseline" type="default" id="TkF-sa-zgj"/>
+                            <constraint firstItem="h2j-9c-PyM" firstAttribute="leading" secondItem="44g-5B-MjT" secondAttribute="leading" type="default" id="UC1-Jq-GFC"/>
+                            <constraint firstItem="PYe-W4-ofZ" firstAttribute="top" secondItem="h2j-9c-PyM" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="cwL-II-San"/>
+                            <constraint firstItem="h2j-9c-PyM" firstAttribute="top" secondItem="44g-5B-MjT" secondAttribute="top" type="default" id="fC2-TB-uK5"/>
+                            <constraint firstItem="PYe-W4-ofZ" firstAttribute="leading" secondItem="44g-5B-MjT" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="zAR-00-F4F"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Scores" image="trophy_icon.png" id="usz-6A-CPv"/>
+                    <navigationItem key="navigationItem" id="YXU-rR-n3f"/>
+                    <connections>
+                        <outlet property="display" destination="h2j-9c-PyM" id="g9P-G5-hx1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Vn-px-VYz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-32" y="1170"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="playingCard_icon2.png" width="30" height="30"/>
+        <image name="setCard_icon.png" width="30" height="30"/>
+        <image name="trophy_icon.png" width="30" height="30"/>
+    </resources>
     <classes>
         <class className="CardGameViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CardGameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="flipCard:" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="outlet" name="cardCollectionView" candidateClass="UICollectionView"/>
-                <relationship kind="outlet" name="resultView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
-            </relationships>
         </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        <class className="GameResultViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GameResultViewController.h"/>
         </class>
         <class className="PlayingCardCollectionViewCell" superclassName="UICollectionViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardCollectionViewCell.h"/>
@@ -287,18 +369,6 @@
         </class>
         <class className="SetGameViewController" superclassName="CardGameViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SetGameViewController.h"/>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
